# TaskTracker

./: .bandit  .coverage  .flake8  .gitignore  .pre-commit-config.yaml  Makefile  README.md  locustfile.py  pyproject.toml
.github/workflows/: ci.yml
src/: main.py
src/task_tracker/: database.py  models.py  schemas.py
src/task_tracker/ui/: app.py
tests/: test_api.py
