[project]
name = "srqs-task-tracker"
version = "0.1.0"
description = "Educational Task Tracker (FastAPI + SQLite + Streamlit) with CI quality gates."
readme = "README.md"
requires-python = ">=3.11,<4.0"
dependencies = [
  "fastapi>=0.115",
  "uvicorn[standard]>=0.30",
  "sqlalchemy>=2.0",
  "pydantic>=2.8",
  "streamlit>=1.35",
  "httpx>=0.27",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0",
  "pytest-cov>=5.0",
  "flake8>=7.0",
  "bandit>=1.7",
  "pip-audit>=2.7",
  "radon>=6.0",
]

[tool.poetry]
package-mode = false

[build-system]
requires = ["poetry-core>=2.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"

[tool.coverage.run]
branch = true
source = ["src"]
omit = ["src/task_tracker/ui/*"]

[tool.coverage.report]
fail_under = 75
show_missing = true
skip_covered = true

